infras/k8s/api-gateway-postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-postgres-depl
  # namespace: nginx-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway-postgres
  template:
    metadata:
      labels:
        app: api-gateway-postgres
    spec:
      containers:
        - name: api-gateway-postgres
          image: postgres:13.4
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-postgres-srv
  # namespace: nginx-ingress
spec:
  selector:
    app: api-gateway-postgres
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: api-gateway-db
#   namespace: ingress-nginx
# spec:
#   type: NodePort
#   selector:
#     app: api-gateway-postgres
#   ports:
#     - name: pgadmin
#       protocol: TCP
#       port: 80
#       targetPort: 80
