infras/k8s/user-postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-postgres-depl
  # namespace: nginx-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-postgres
  template:
    metadata:
      labels:
        app: user-postgres
    spec:
      containers:
        - name: user-postgres
          image: postgres:13.4
---
apiVersion: v1
kind: Service
metadata:
  name: user-postgres-srv
  # namespace: nginx-ingress
spec:
  selector:
    app: user-postgres
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: user-db
#   namespace: nginx-ingress
# spec:
#   type: NodePort
#   selector:
#     app: user-postgres
#   ports:
#     - name: pgadmin
#       protocol: TCP
#       port: 80
#       targetPort: 80
